# feed-gipeda

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  feed-gipeda-init.sh  feed-gipeda-master.sh  feed-gipeda-slave.sh  feed-gipeda.cabal  feed-gipeda.yaml  stack-ghc-7.10.2.yaml  stack-ghc-7.10.3.yaml  stack-ghc-7.8.4.yaml  stack-ghc-8.0.1.yaml  stack-lts-2.yaml  stack-lts-3.yaml  stack-lts-5.yaml  stack-lts-6.yaml  stack.yaml
app/: Main.hs
assets/: default_index.html
init.d/: feed-gipeda-master.sh
src/: Assets.hs  ConcurrentQueueSet.hs  Config.hs  Distributed.hs  FeedGipeda.hs  Gipeda.hs  GipedaSettings.hs  GitShell.hs  Main.hs  Master.hs  Repo.hs  RepoWatcher.hs  THGenerated.hs  TaskQueue.hs  Worker.hs
src/FeedGipeda/: Assets.hs  Config.hs  Gipeda.hs  GitShell.hs  Master.hs  Prelude.hs  Repo.hs  Slave.hs  THGenerated.hs  TaskQueue.hs  TaskScheduler.hs  Types.hs  Worker.hs
src/FeedGipeda/Master/: CommitQueue.hs  File.hs  Finalize.hs  RepoDiff.hs
src/Master/: File.hs  Finalize.hs  RepoDiff.hs
src/Processes/: BacklogClearer.hs  ConfigWatcher.hs  FileWatcher.hs  Finalizer.hs  RepoSyncer.hs  Utils.hs
systemd/: feed-gipeda-config.service  feed-gipeda-config.timer  feed-gipeda-master.service  feed-gipeda-slave.service
tests/: Acceptance.hs  Unit.hs  test.hs
tests/Acceptance/: Driver.hs  Files.hs
tests/Acceptance/Files/: feed-gipeda.yaml  malformed-feed-gipeda.yaml
tests/Unit/: CommitQueue.hs
