name:                feed-gipeda
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/sgraf812/feed-gipeda#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           2015 Sebastian Graf
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable feed-gipeda
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       GitShell
                     , Repo
                     , Master
                     , Worker
                     , Gipeda
                     , Config
                     , THGenerated
                     , TaskQueue
                     , Assets
                     , Master.Finalize
                     , Master.File
                     , Master.RepoDiff
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fsnotify >= 0.2.1 && < 0.3.0
                     , containers >= 0.5.0.0 && < 0.6.0.0
                     , yaml >= 0.8.11 && < 0.9
                     , aeson
                     , text
                     , process >= 1.2.0.0 && < 1.5.0.0
                     , directory >= 1.2.0.0 && < 1.3.0.0
                     , filepath >= 1.4.0.0 && < 1.5.0.0
                     , network-uri >= 2.6.0.0 && < 2.7.0.0
                     , data-hash >= 0.2.0.0 && < 0.3.0.0
                     , transformers >= 0.2.0.0
                     , argparser >= 0.3.1 && < 0.4.0
                     , time >= 1.5 && < 2.0
                     , data-default
                     , bytestring >= 0.10.0.0
                     , binary >= 0.7.0.0
                     , distributed-process >= 0.5.0
                     , distributed-process-extras >= 0.1.0
                     , distributed-process-client-server >= 0.1.1
                     , distributed-process-async >= 0.1.0
                     , distributed-process-simplelocalnet >= 0.2.0
                     , file-embed
                     , reactive-banana >= 1.0.0.0
                     , logging >= 3.0.0
                     , temporary >= 1.1
