name:                feed-gipeda
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/sgraf812/feed-gipeda#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           2015 Sebastian Graf
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FeedGipeda
  other-modules:       FeedGipeda.GitShell
                     , FeedGipeda.Repo
                     , FeedGipeda.Master
                     , FeedGipeda.Worker
                     , FeedGipeda.Gipeda
                     , FeedGipeda.Config
                     , FeedGipeda.THGenerated
                     , FeedGipeda.TaskQueue
                     , FeedGipeda.Assets
                     , FeedGipeda.Master.Finalize
                     , FeedGipeda.Master.File
                     , FeedGipeda.Master.RepoDiff
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fsnotify >= 0.2.1 && < 0.3.0
                     , containers >= 0.5.0.0 && < 0.6.0.0
                     , yaml >= 0.8.11 && < 0.9
                     , aeson
                     , text
                     , process >= 1.2.0.0 && < 1.5.0.0
                     , directory >= 1.2.0.0 && < 1.3.0.0
                     , filepath >= 1.4.0.0 && < 1.5.0.0
                     , network-uri >= 2.6.0.0 && < 2.7.0.0
                     , data-hash >= 0.2.0.0 && < 0.3.0.0
                     , transformers >= 0.2.0.0
                     , time >= 1.5 && < 2.0
                     , bytestring >= 0.10.0.0
                     , binary >= 0.7.0.0
                     , distributed-process >= 0.5.0
                     , distributed-process-extras >= 0.1.0
                     , distributed-process-client-server >= 0.1.1
                     , distributed-process-async >= 0.1.0
                     , distributed-process-simplelocalnet >= 0.2.0
                     , file-embed
                     , reactive-banana >= 1.0.0.0
                     , logging >= 3.0.0
                     , temporary >= 1.1

executable feed-gipeda
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , feed-gipeda
                     , directory >= 1.2.0.0 && < 1.3.0.0
                     , filepath >= 1.4.0.0 && < 1.5.0.0
                     , optparse-applicative >= 0.11
                     , logging >= 3.0.0

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  other-modules:       Acceptance
                     , Acceptance.Files
  build-depends:       base >= 4 && < 5
                     , tasty >= 0.11
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , tasty-hunit
                     , tasty-hspec
                     , temporary >= 1.1
                     , file-embed
                     , exceptions
                     , process >= 1.2.0.0 && < 1.5.0.0
                     , managed
                     , bytestring >= 0.10.0.0
                     , transformers >= 0.2.0.0
